fix argument indexing